[P4ADEV-4782] retrieve pdnd config from organization
